--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,13 @@ spring:
     name: fight
   profiles:
     active: dev
+  redis:
+    redission:
+    # see org.redisson.config.Config
+      config:
+        singleServerConfig:
+         address: localhost:6379
+
 server:
   port: 8080
 
