--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,19 @@
 			<artifactId>javax.mail</artifactId>
 			<version>1.5.6</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.redisson/redisson -->
+		<!--<dependency>-->
+			<!--<groupId>org.redisson</groupId>-->
+			<!--<artifactId>redisson</artifactId>-->
+			<!--<version>3.15.5</version>-->
+		<!--</dependency>-->
+		<dependency>
+			<groupId>org.redisson</groupId>
+			<artifactId>redisson-spring-boot-starter</artifactId>
+			<version>3.15.5</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
