--- a/pom.xml
+++ b/pom.xml
@@ -107,8 +107,23 @@
 			<version>3.4.4</version>
 		</dependency>
 
+<!--		<dependency>-->
+<!--			<groupId>com.hynnet</groupId>-->
+<!--			<artifactId>jacob</artifactId>-->
+<!--			<version>1.18</version>-->
+<!--		</dependency>-->
 
-
+		<!-- mqtt -->
+		<dependency>
+		   <groupId>org.eclipse.paho</groupId>
+		   <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+		   <version>1.2.5</version>
+        </dependency>
+		<dependency>
+		   <groupId>org.bouncycastle</groupId>
+		   <artifactId>bcpkix-jdk15on</artifactId>
+		   <version>1.70</version>
+		</dependency>
 	</dependencies>
 
 	<build>
